# squishy

./: .env.example  .gitignore  README.md  pyproject.toml
squishy/: __init__.py  __main__.py  agent.py  api.py  cli.py  client.py  config.py  context.py  display.py  errors.py  file_browser.py  plan_state.py  plan_tracker.py  quality.py  session.py  tool_restrictions.py
squishy/bench/: __init__.py  cli.py  runner.py  swebench.py  terminalbench.py
squishy/index/: __init__.py  agents_md.py  ast_generic.py  ast_py.py  build.py  model.py  optimize.py  staleness.py  store.py  summarize.py  walker.py
squishy/mcp/: __init__.py  client.py  config.py  tools.py  types.py
squishy/tools/: __init__.py  base.py  fs.py  plan.py  recall.py  scratchpad.py  shell.py
tests/: conftest.py  test_agent_loop.py  test_api.py  test_bench.py  test_change_tracking.py  test_cli.py  test_context.py  test_context_loading.py  test_edge_cases.py  test_file_browser.py  test_format_tokens.py  test_index_ast_py.py  test_index_build.py  test_index_optimize.py  test_index_staleness.py  test_index_store.py  test_index_summarize.py  test_index_walker.py  test_live_api.py  test_mcp.py  test_parsing.py  test_permissions.py  test_plan_mode_e2e.py  test_plan_tool.py  test_plan_tools.py  test_quality.py  test_recall_tool.py  test_retry.py  test_session.py  test_token_counting.py  test_tool_context_state.py  test_tools_fs.py  test_tools_shell.py  test_trim_history_pairing.py
