[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "squishy"
version = "0.2.0"
description = "Minimal async local-LLM coding agent. OpenAI-compatible. Atlas-inspired."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
dependencies = [
    "openai>=1.40",
    "rich>=13.7",
    "prompt_toolkit>=3.0.47",
    "tenacity>=8.3",
    "httpx>=0.27",
]
 
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]
 
[project.scripts]
squishy = "squishy.cli:run"
squishy-bench = "squishy.bench.cli:run"
 
[tool.hatch.build.targets.wheel]
packages = ["squishy"]
 
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: integration test requiring a live OpenAI-compatible endpoint",
]
 
[tool.ruff]
line-length = 100
target-version = "py311"
 
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
 
[tool.mypy]
python_version = "3.11"
strict = true
files = [
    "squishy/tools/base.py",
    "squishy/context.py",
    "squishy/config.py",
    "squishy/errors.py",
]